# Flare

./: .gitignore  README.md  appveyor.yml  cmake_clean_config.txt  cmake_config_log.txt  cmake_config_log2.txt  cmake_config_log3.txt  cmake_config_log4.txt  debug_output.txt  gitlog.txt  move_thirdparty.py  orig_CMake.txt  rebrand_debug.txt  show_diff.py  show_log.py  sparse.patch  test_package.bat  test_package_root.bat  tflash_base.cpp  tflash_ours.cpp  tflash_theirs.cpp
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: agentic-auto-fix.lock.yml  agentic-auto-fix.yml  ci.yml  publish_chocolatey.yml  publish_on_release.yml  sync_upstream.yml  workflow_linux.yml  workflow_macos.yml  workflow_windows.yml
ci-scripts/windows/: FlareRegistrySetup.bat  setup-deps.cmd
doc/: FLASH_SUPPORT.md
flare/sources/: CMakeLists.txt
flare/sources/common/tapptools/: tenv.cpp
flare/sources/flare/: CMakeLists.txt  filebrowserpopup.cpp  flare.qrc  flashimport.cpp  iocommand.cpp  layoutUtils.cpp  main.cpp  menubar.cpp  menubarcommandids.h  scriptconsolepanel_stub.cpp
flare/sources/flare_legacy/: CMakeLists.txt  flashimport.cpp  mainwindow.cpp  menubar.cpp  menubarcommandids.h
flare/sources/flarelib/: toonzfolders.cpp
flare/sources/image/: tiio.cpp
flare/sources/tnzext/: CMakeLists.txt
flare/sources/toonz/: CMakeLists.txt
flare/sources/toonzlib/: CMakeLists.txt
flare/sources/toonzqt/: CMakeLists.txt
tools/flash/: import_container.py
tools/flash/tests/: test_import_container.py
toonz/install/: SystemVar.ini
toonz/sources/: CMakeLists.txt
toonz/sources/toonz/: shortcutpopup.cpp
toonz/sources/toonzqt/: dvdialog.cpp
